--- a/templates/cgv.html.twig
+++ b/templates/cgv.html.twig
@@ -154,7 +154,7 @@
                     <div>
                         <h3>
                             Article 16 – Référence au client</h3>
-                        </p>Sauf interdiction expresse de votre part, nous sommes autorisés à mentionner votre nom et à reproduire vos marques et/ou signes distinctifs sur nos propres supports de communication et à nous prévaloir des prestations que nous vous avons fournies ainsi que les livrables réalisés dans le cadre de la relation contractuelle afin de promouvoir notre propre activité.Nous nous réservons la possibilité d’insérer sur votre site web un hyperlien renvoyant vers le site www.hibou.helvie.fr .</p>
+                        <p>Sauf interdiction expresse de votre part, nous sommes autorisés à mentionner votre nom et à reproduire vos marques et/ou signes distinctifs sur nos propres supports de communication et à nous prévaloir des prestations que nous vous avons fournies ainsi que les livrables réalisés dans le cadre de la relation contractuelle afin de promouvoir notre propre activité.Nous nous réservons la possibilité d’insérer sur votre site web un hyperlien renvoyant vers le site www.hibou.helvie.fr .</p>
                     </div>
                     <div>
                         <h3>
@@ -170,7 +170,7 @@
                     <div>
                         <p>
                             17.03. Responsabilité pour les dommages commerciaux</p>
-                        Nous ne saurions être tenu pour responsable ni des dommages indirects, tels que, notamment, manque à gagner ou pertes de marché ou baisse du chiffre d’affaires trouvant leur origine ou étant la conséquence de la relation contractuelle, ni les dommages causés à des personnes ou à des biens distincts de l’objet de la relation contractuelle. En tout état de cause, toute action à notre encontre en recherche indemnitaire directe ou indirecte, sur un fondement notamment contractuel ou délictuel, à l’occasion de la formation, de l’exécution, de l’inexécution, de l’interprétation, de la prorogation, de la résiliation, de la fin ou en rapport d’une manière quelconque avec les présentes, ne peut excéder dans son quantum le montant hors taxes facturé que nous vous aurons facturé au titre de la relation contractuelle.</p>
+                        <p>Nous ne saurions être tenu pour responsable ni des dommages indirects, tels que, notamment, manque à gagner ou pertes de marché ou baisse du chiffre d’affaires trouvant leur origine ou étant la conséquence de la relation contractuelle, ni les dommages causés à des personnes ou à des biens distincts de l’objet de la relation contractuelle. En tout état de cause, toute action à notre encontre en recherche indemnitaire directe ou indirecte, sur un fondement notamment contractuel ou délictuel, à l’occasion de la formation, de l’exécution, de l’inexécution, de l’interprétation, de la prorogation, de la résiliation, de la fin ou en rapport d’une manière quelconque avec les présentes, ne peut excéder dans son quantum le montant hors taxes facturé que nous vous aurons facturé au titre de la relation contractuelle.</p>
                     </div>
                     <div>
                         <p>
@@ -200,12 +200,12 @@
                     </div>
                     <div>
                         <p>20.02. Non renonciation</p>
-                        </p>Le fait pour l’une ou l’autre des Parties de ne pas invoquer l’un quelconque des articles, clauses, stipulations ou parties des Conditions générales ne saurait, en aucune manière, être interprété comme une renonciation tacite à se prévaloir dudit article, clause, stipulation ou partie des Conditions générales. De même, le fait pour l’une des Parties de ne pas se prévaloir de l’inexécution, de la mauvaise exécution ou de l’exécution partielle ou tardive de l’un quelconque des articles, clauses, stipulations ou parties des Conditions Générales par une autre Partie ne saurait, en aucune manière, être interprété comme une renonciation tacite à s’en prévaloir ultérieurement.</p>
+                        <p>Le fait pour l’une ou l’autre des Parties de ne pas invoquer l’un quelconque des articles, clauses, stipulations ou parties des Conditions générales ne saurait, en aucune manière, être interprété comme une renonciation tacite à se prévaloir dudit article, clause, stipulation ou partie des Conditions générales. De même, le fait pour l’une des Parties de ne pas se prévaloir de l’inexécution, de la mauvaise exécution ou de l’exécution partielle ou tardive de l’un quelconque des articles, clauses, stipulations ou parties des Conditions Générales par une autre Partie ne saurait, en aucune manière, être interprété comme une renonciation tacite à s’en prévaloir ultérieurement.</p>
                     </div>
                     <div>
                         <p>
                             20.03. Comportement loyal et de bonne foi</p>
-                        Chacune des Parties s’engage à toujours se comporter, vis-à-vis de l’autre Partie, comme un partenaire loyal et de bonne foi et, notamment, à notifier sans délai à l’autre Partie, tout différend ou toute difficulté qu’elle pourrait rencontrer dans le cadre de l’exécution de la relation contractuelle.</p>
+                        <p>Chacune des Parties s’engage à toujours se comporter, vis-à-vis de l’autre Partie, comme un partenaire loyal et de bonne foi et, notamment, à notifier sans délai à l’autre Partie, tout différend ou toute difficulté qu’elle pourrait rencontrer dans le cadre de l’exécution de la relation contractuelle.</p>
                     </div>
                     <div>
                         <p>
