--- a/templates/owlAgency.html.twig
+++ b/templates/owlAgency.html.twig
@@ -69,7 +69,7 @@
                                                     <div class="description">
                                                         <h3 class="big-text mobileHide">Joal</h3>
                                                         <p class="small-text mobileHide">Responsable marketing</p>
-                                                        <p class="small-text" style="font-size:17.5px">Toujours à l’affût des nouvelles tendances marketing, j’aime proposer une stratégie personnelle afin de sublimer l’identité de chaque entreprise. Les campagnes paid’Ads et les réseaux sociaux n’ont plus de secret pour moi. Ensemble, nous relèverons les défis qui vous attendent !</p>
+                                                        <p class="small-text">Toujours à l’affût des nouvelles tendances marketing, j’aime proposer une stratégie personnelle afin de sublimer l’identité de chaque entreprise. Les campagnes paid’Ads et les réseaux sociaux n’ont plus de secret pour moi. Ensemble, nous relèverons les défis qui vous attendent !</p>
 
                                                     </div>
                                                 </div>
@@ -90,7 +90,7 @@
                                                     <h3 class="big-text">Emmanuelle</h3>
                                                     <p class="authorMail small-text" style="margin-bottom:0;">Design</p>
                                                     <p class="authorMail small-text" style="margin-top:0;">#specialistedudesign</p>
-                                                    <p class="small-text">"Je n'ai pas vu l'heure passer pourtant je surveillais"</p>
+                                                    <p class="small-text">"La complexité réside à concevoir la simplicité"</p>
 
                                                 </div>
                                             </div>
@@ -100,7 +100,9 @@
                                                 <div class="description">
                                                     <h3 class="big-text mobileHide">Emmanuelle</h3>
                                                     <p class="small-text mobileHide">Design</p>
-                                                    <p class="small-text" style="font-size:17.5px">xxx</p>
+                                                    <p class="small-text">​Mon défi quotidien est de faire en sorte que l’internaute ou le mobinaute s’oriente naturellement et trouve ce qu’il est venu chercher de la façon la plus efficace possible. ​
+                                                        Je jongle donc avec l’équilibre entre fonctionnalités, simplicité, esthétique,
+                                                        accessibilité, intuition, etc !</p>
 
                                                 </div>
                                             </div>
@@ -123,8 +125,7 @@
                                                     <p class="authorMail small-text" style="margin-top:0;">#topdudev</p>
 
 
-                                                    <p class="small-text">"Développer, c'est rendre un rêve réel."</p>
-
+                                                    <p class="small-text">"C'est tout un art, de savoir développer les idées..."</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -133,7 +134,7 @@
                                                 <div class="description">
                                                     <h3 class="big-text mobileHide">Sylvie</h3>
                                                     <p class="small-text mobileHide">Développeuse</p>
-                                                    <p class="small-text" style="font-size:17.5px">Passionnée par les nouvelles technologies, émerveillée par la magie qui s’opère lorsqu'un navigateur traduit les lignes de codes, soucieuse du bien-être de l’internaute, j'utilise des technologies fiables , telles que Symfony, assurant ainsi une parfaite sécurité à chacun de mes projets.</p>
+                                                    <p class="small-text">Passionnée par les nouvelles technologies, émerveillée par la magie qui s’opère lorsqu'un navigateur traduit les lignes de codes, soucieuse du bien-être de l’internaute, j'utilise des technologies fiables , telles que Symfony, assurant ainsi une parfaite sécurité à chacun de mes projets.</p>
 
                                                 </div>
                                             </div>
