--- a/templates/owlReferences.html.twig
+++ b/templates/owlReferences.html.twig
@@ -49,11 +49,11 @@
                             </div>
 
                             <div class="col-md-3 col-xs-12">
-                                <a aria-label="Lien extérieur vers le site internet"  href="http://www.asso.helvie.fr"><img src="../assets/img/liensite1.png" class="imgService  image-header"></a>
+                                <a aria-label="Lien extérieur vers le site internet"  href="http://www.asso.helvie.fr"><img src="../assets/img/lienSite1.png" class="imgService  image-header"></a>
                             </div>
 
                             <div class="col-md-3 col-xs-12">
-                                <a aria-label="Lien extérieur vers le site internet" href="http://www.projet4.helvie.fr"><img src="../assets/img/liensite2.png" class="imgService  image-header"></a>
+                                <a aria-label="Lien extérieur vers le site internet" href="http://www.projet4.helvie.fr"><img src="../assets/img/lienSite2.png" class="imgService  image-header"></a>
                             </div>
 
                             <div class="col-md-3 col-xs-12">
@@ -204,7 +204,7 @@
                         Parkinson
                     </button>
                     <button aria-label="Afficher l'image exemple pour atteints de daltonisme"  style="float:left;margin-right:20px;" type="button" id="colorblindButton" class="btn btn-fill btn-owl accessBtn">
-                        Daltoniens
+                        Daltonisme
                     </button>
 
 
