--- a/templates/owlServices.html.twig
+++ b/templates/owlServices.html.twig
@@ -26,14 +26,14 @@
 
                                     <img src="../assets/img/logo2.png" class="image-header">
                                 </div>
-                                <p>Dotés d’une forte culture du résultat, nous appliquons des process sécurisés et nous vous offrons un niveau de service irréprochable.</p>
+                                <p>Innovez avec des solutions digitales adaptées aux déficiences cognitives.</p>
                             </div>
                             <div class="col-md-4 col-sm-6 serviceBlock">
                                 <div class = "imgService">
                                 <img src="../assets/img/logo1.png" class="image-header">
                                 </div>
 
-                                <p>Nous vous accompagnons dans la stratégie digitale globale de votre projet. Toujours à votre écoute, nous nous adaptons à vos envies et vos besoins.</p>
+                                <p>Misez sur le confort visuel pour convertir un maximum d'internautes</p>
                             </div>
 
 
@@ -42,7 +42,7 @@
 
                                 <img src="../assets/img/logo3.png" class="image-header">
                                 </div>
-                                <p>Pour votre projet digital, l’approche agile est une stratégie utilisée par notre agence, qui sera un atout pour votre réussite.</p>
+                                <p>Pensez inclusive design pour convaincre et élargir votre audience</p>
 
                             </div>
                         </div>
@@ -68,7 +68,7 @@
 
             <div class="col-md-12">
 
-
+                    <div class="speGeneral">
                     <div class="row generalSpeBlock">
 
                         <div>
@@ -87,6 +87,12 @@
 
                             <div class="col-md-3 col-sm-6 col-xs-12">
                                 <img src="../assets/img/imgAudit.png" class="imgService auditOpen image-header link">
+                            </div>
+
+                            <div class="col-md-12 text-center callSpe" style="height:50px;">
+                                <a  aria-label="Lien vers la page de contact" class="btn btn-fill btn-owl"  href={{ path('owlContactDisplay')}}#contactAnchor>
+                                    Je prends rendez-vous
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -134,15 +140,15 @@
 
                         <div class="row">
 
-                            <div class="col-md-4 speDescriptive">
+                            <div class="col-md-4 col-sm-6 col-xs-12 speDescriptive">
                                 <img  src="../assets/img/speDev1.jpg" class="devImg image-header">
                             </div>
 
-                            <div class="col-md-4 speDescriptive">
+                            <div class="col-md-4 col-sm-6 col-xs-12 speDescriptive">
                                 <img src="../assets/img/speDev2.jpg" class="devImg image-header">
                             </div>
 
-                            <div class="col-md-4 speDescriptive">
+                            <div class="col-md-4 col-sm-6 col-xs-12 speDescriptive">
                                 <img src="../assets/img/speDev3.jpg" class="devImg image-header">
                             </div>
 
@@ -162,15 +168,15 @@
 
                         <div class="row">
 
-                            <div class="col-md-4 speDescriptive">
+                            <div class="col-md-4 col-sm-6 col-xs-12 speDescriptive">
                                 <img  src="../assets/img/fullImg7.png" class="designImg image-header">
                             </div>
 
-                            <div class="col-md-4 speDescriptive">
+                            <div class="col-md-4 col-sm-6 col-xs-12 speDescriptive">
                                 <img src="../assets/img/fullImg8.png" class="designImg image-header">
                             </div>
 
-                            <div class="col-md-4 speDescriptive">
+                            <div class="col-md-4 col-sm-6 col-xs-12 speDescriptive">
                                 <img src="../assets/img/fullImg9.png" class="designImg image-header">
                             </div>
 
@@ -190,23 +196,19 @@
 
                         <div class="row">
 
-                            <div class="col-md-6 speDescriptive" style="text-align:center;">
+                            <div class="col-md-6 col-sm-12 col-xs-12 speDescriptive">
                                 <img  src="../assets/img/speAudit1.png" class="auditImg image-header">
                             </div>
 
-                            <div class="col-md-6 speDescriptive" style="text-align:center;">
+                            <div class="col-md-6 col-sm-12 col-xs-12 speDescriptive">
                                 <img src="../assets/img/speAudit2.png" class="auditImg image-header">
                             </div>
 
                         </div>
 
                     </div>
+                    </div>
 
-                <div class="col-md-12 text-center" style="height:50px;">
-                        <a  aria-label="Lien vers la page de contact" class="btn btn-fill btn-owl"  href={{ path('owlContactDisplay')}}#contactAnchor>
-                            Je prends rendez-vous
-                        </a>
-                </div>
             </div>
         </div>
     </div>
