--- a/public/assets/css/anim.css
+++ b/public/assets/css/anim.css
@@ -53,6 +53,11 @@
 }
 
 
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~  Anim services ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+
+
 .market, .dev, .design, .audit {
     background-color:#113441;
     /*z-index:1;*/
@@ -60,7 +65,6 @@
     /*-webkit-mask-position-y: 0;*/
     /*min-height:40px;*/
     /*min-width:40px;*/
-
     opacity:0;
     width: 1px;
     height: 1px;
@@ -68,10 +72,26 @@
     text-align:left;
     /*background: red;*/
     -webkit-transition: width 1s, height 1s, -webkit-transform 1s; /* Safari */
-    transition: width 1s, height 1s, min-height 1s, min-width 1s, font-size 1s, transform 1s;
+    transition:width 1s, height 1s, min-height 1s, min-width 1s, font-size 1s, transform 1s;
     /*margin-bottom: 50px;*/
     /*padding: 40px;*/
 
+}
+.specialization {
+    min-height:530px;
+}
+.specialization2 {
+    /*!*opacity:0;*!*/
+    /*!*width: 1px;*!*/
+    /*min-height: 1000px;*/
+    /*!*font-size:2px;*!*/
+    /*!*text-align:left;*!*/
+    /*!*background: red;*!*/
+    /*-webkit-transition: min-width 1s, -webkit-transform 1s; !* Safari *!*/
+    /*transition: min-height 1s, transform 1s;*/
+    /*!*margin-bottom: 50px;*!*/
+    /*!*padding: 40px;*!*/
+padding-bottom:0px;
 }
 
 .market h2, .dev h2, .design h2, .audit h2 {
@@ -99,15 +119,43 @@
 
 .speDisplay {
     width: 100%;
-    height: 100%;
-    min-height:400px;
+    height: 660px;
+    /*min-height:400px;*/
     /*min-width:400px;*/
     font-size:22px;
     opacity:10;
     margin-bottom: 30px;
+    position:absolute;
+    z-index:100;
 
     /*-webkit-transform: rotate(180deg); !* Safari *!*/
     /*transform: rotate(180deg);*/
+}
+.speGeneral {
+    height:660px;
+    margin-bottom:30px;
+}
+
+@media(max-width: 993px) {
+    .speDisplay {
+        padding-top:20px;
+        height: 1170px;
+    }
+    .speGeneral {
+        height: 1170px;
+    }
+}
+
+
+@media(max-width: 767px) {
+
+    .speDisplay {
+        padding-top:20px;
+        height: 1620px;
+    }
+    .speGeneral {
+        height: 1620px;
+    }
 }
 
 .speDisplay h2 {
@@ -167,6 +215,7 @@
     text-align: center;
     list-style: none;
 }
+
 .carousel-indicators li {
     display: inline-block;
     width: 14px;
