--- a/templates/owlBlog.html.twig
+++ b/templates/owlBlog.html.twig
@@ -91,19 +91,46 @@
                                 <div class="description">
                                     <h3 class="big-text">{{ thisArt.author }}</h3>
                                     <p class="small-text" style="text-align:center;">{{ thisArt.role }}</p>
-                                    <p class="small-text" style="text-align:center;">
+
+                                    <p class="small-text" style="text-align:center;margin-bottom:0; padding-bottom:0;">
                                     {% for tag in thisArt.categories %}
+
                                         {% if loop.index == 1 %}
-                                        {{ tag.name }}
-                                        {% endif %}
-                                    {% endfor %}
-                                        ♦
-                                    {% for tag in thisArt.categories %}
-                                        {% if loop.index == 2 %}
                                             {{ tag.name }}
                                         {% endif %}
+                                        {% if loop.index == 2 %}
+                                            ♦ {{ tag.name }}
+                                        {% endif %}
+
                                     {% endfor %}
                                     </p>
+
+                                    <p class="small-text" style="text-align:center;margin-bottom:0; padding-bottom:0;">
+                                        {% for tag in thisArt.categories %}
+
+                                            {% if loop.index == 3 %}
+                                                {{ tag.name }}
+                                            {% endif %}
+                                            {% if loop.index == 4 %}
+                                                ♦ {{ tag.name }}
+                                            {% endif %}
+
+                                        {% endfor %}
+                                    </p>
+
+                                    <p class="small-text" style="text-align:center; margin-bottom:0; padding-bottom:0;">
+                                        {% for tag in thisArt.categories %}
+
+                                            {% if loop.index == 5 %}
+                                                {{ tag.name }}
+                                            {% endif %}
+                                            {% if loop.index == 6 %}
+                                                ♦ {{ tag.name }}
+                                            {% endif %}
+
+                                        {% endfor %}
+                                    </p>
+
                                 </div>
 
                             </div>
@@ -191,7 +218,7 @@
 
                         <div class="blogTitleText">
 
-                            <p>{{ article.date|date("m/d/Y") }}</p>
+                            <p>{{ article.updateDate|date("d/m/Y") }}</p>
 
                             <a aria-label="Lien vers la page de l'article"  class="card-title" href={{ path('owlBlogDisplay',{'art': article.id})}}>
 
@@ -218,7 +245,7 @@
 
                         <div class="blogTitleText">
 
-                            <p>{{ article.date|date("m/d/Y") }}</p>
+                            <p>{{ article.updateDate|date("d/m/Y") }}</p>
 
                             <a  aria-label="Lien vers la page de l'article" class="card-title" href={{ path('owlBlogDisplay',{'art': article.id})}}>
 
@@ -245,7 +272,7 @@
 
                         <div class="blogTitleText">
 
-                            <p>{{ article.date|date("m/d/Y") }}</p>
+                            <p>{{ article.updateDate|date("d/m/Y") }}</p>
 
                             <a  aria-label="Lien vers la page de l'article" class="card-title" href={{ path('owlBlogDisplay',{'art': article.id})}}>
 
@@ -273,7 +300,7 @@
 
 {#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ BLOC NEWSLETTER ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#}
 
-        <div class="whiteBlock section" style="padding-top:50px;">
+        <div class="blueBlock section" style="padding-top:50px;">
             <div class="container">
                 <div class="title-area">
                     <h2>Recevez tous nos informations</h2>
